fixed height for body on firefox

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     position: relative;
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     height: max-content;
     margin: 0;
     padding: 0;
